# PythonShare

./: .gitignore  MANIFEST  README.md  pyproject.toml  requirements.txt
src/image2sketch/: __init__.py  convert_image.py
tools/: convert_image.py
